// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SociowgramBackground /> renders ok for image 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <div
    className="sociogram-background"
>
    <div
        className="sociogram-background__image"
        style={
            Object {
                "backgroundImage": "url(map.png)",
              }
        }
    />
</div>,
  "nodes": Array [
    <div
      className="sociogram-background"
>
      <div
            className="sociogram-background__image"
            style={
                  Object {
                        "backgroundImage": "url(map.png)",
                      }
            }
      />
</div>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 1,
      "_context": Object {},
      "_currentElement": <Background
        allowHighlighting={false}
        allowPositioning={false}
        canCreateEdge={false}
        canHighlight={false}
        concentricCircles={0}
        createEdge="bar"
        displayEdges={Array []}
        highlightAttributes={Object {}}
        image="map.png"
        layoutVariable="foo"
        nodeBinSortOrder={Object {}}
        selectMode=""
        skewedTowardCenter={false}
/>,
      "_debugID": 3,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": Background {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "allowHighlighting": false,
          "allowPositioning": false,
          "canCreateEdge": false,
          "canHighlight": false,
          "concentricCircles": 0,
          "createEdge": "bar",
          "displayEdges": Array [],
          "highlightAttributes": Object {},
          "image": "map.png",
          "layoutVariable": "foo",
          "nodeBinSortOrder": Object {},
          "selectMode": "",
          "skewedTowardCenter": false,
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 2,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <div
          className="sociogram-background"
>
          <div
                    className="sociogram-background__image"
                    style={
                              Object {
                                        "backgroundImage": "url(map.png)",
                                      }
                    }
          />
</div>,
        "_debugID": 4,
        "_renderedOutput": <div
          className="sociogram-background"
>
          <div
                    className="sociogram-background__image"
                    style={
                              Object {
                                        "backgroundImage": "url(map.png)",
                                      }
                    }
          />
</div>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Background
    allowHighlighting={false}
    allowPositioning={false}
    canCreateEdge={false}
    canHighlight={false}
    concentricCircles={0}
    createEdge="bar"
    displayEdges={Array []}
    highlightAttributes={Object {}}
    image="map.png"
    layoutVariable="foo"
    nodeBinSortOrder={Object {}}
    selectMode=""
    skewedTowardCenter={false}
/>,
}
`;

exports[`<SociowgramBackground /> renders ok for radar 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <div
    className="sociogram-background"
>
    <Radar
        n={4}
        skewed={true}
    />
</div>,
  "nodes": Array [
    <div
      className="sociogram-background"
>
      <Radar
            n={4}
            skewed={true}
      />
</div>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 1,
      "_context": Object {},
      "_currentElement": <Background
        allowHighlighting={false}
        allowPositioning={false}
        canCreateEdge={false}
        canHighlight={false}
        concentricCircles={4}
        createEdge="bar"
        displayEdges={Array []}
        highlightAttributes={Object {}}
        image={null}
        layoutVariable="foo"
        nodeBinSortOrder={Object {}}
        selectMode=""
        skewedTowardCenter={true}
/>,
      "_debugID": 1,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": Background {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "allowHighlighting": false,
          "allowPositioning": false,
          "canCreateEdge": false,
          "canHighlight": false,
          "concentricCircles": 4,
          "createEdge": "bar",
          "displayEdges": Array [],
          "highlightAttributes": Object {},
          "image": null,
          "layoutVariable": "foo",
          "nodeBinSortOrder": Object {},
          "selectMode": "",
          "skewedTowardCenter": true,
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <div
          className="sociogram-background"
>
          <Radar
                    n={4}
                    skewed={true}
          />
</div>,
        "_debugID": 2,
        "_renderedOutput": <div
          className="sociogram-background"
>
          <Radar
                    n={4}
                    skewed={true}
          />
</div>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Background
    allowHighlighting={false}
    allowPositioning={false}
    canCreateEdge={false}
    canHighlight={false}
    concentricCircles={4}
    createEdge="bar"
    displayEdges={Array []}
    highlightAttributes={Object {}}
    image={null}
    layoutVariable="foo"
    nodeBinSortOrder={Object {}}
    selectMode=""
    skewedTowardCenter={true}
/>,
}
`;
